fixed overlapping of navbar

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding-top:100px;
+  background-color: #1F1F1F;
 }
 
 h1 {
